--- a/src/app/home/sale/sale.component.html
+++ b/src/app/home/sale/sale.component.html
@@ -177,17 +177,17 @@
                     <div class="col-lg-12">
                         <table class="align-middle mb-0 table table-borderless table-striped table-hover table-bordar">
                             <tr class="sub-discount border-table-tr">
-                                <td class="availableQty">Customer Name</td>
+                                <td class="availableQty">Mobile</td>
                                 <td>
-                                    <input autocomplete="off" id="customer_name" [(ngModel)]="order.customer_name" name="customer_name"
-                                    type="text" class="form-control validation-input" />
+                                    <input enterFocus autocomplete="off" id="customer_mobile" [(ngModel)]="order.customer_mobile"
+                                    name="customer_mobile" type="text" class="form-control validation-input" />
                                 </td>
                             </tr>
                             <tr class="sub-discount border-table-tr">
-                                <td class="availableQty">Mobile</td>
+                                <td class="availableQty">Customer Name</td>
                                 <td>
-                                    <input autocomplete="off" id="customer_mobile" [(ngModel)]="order.customer_mobile"
-                                    name="customer_mobile" type="text" class="form-control validation-input" />
+                                    <input enterFocus autocomplete="off" id="customer_name" [(ngModel)]="order.customer_name" name="customer_name"
+                                    type="text" class="form-control validation-input" />
                                 </td>
                             </tr>
                             <tr *ngIf="salesmanShow" class="sub-discount border-table-tr">
@@ -207,12 +207,12 @@
                                 <td class="availableQty">Discount</td>
                                 <td class="position-relative form-check">
                                     <label class="form-check-label radio-from-lebel">
-                                    <input value="fixed" [(ngModel)]="this.order.discount_type" name="discount_type" type="radio"
+                                    <input enterFocus value="fixed" [(ngModel)]="this.order.discount_type" name="discount_type" type="radio"
                                         class="form-check-input" checked (click)="discountTypeChange('fixed')" />
                                     Fixed
                                     </label>
                                     <label class="form-check-label radio-from-lebel" style="padding-left: 14%">
-                                    <input value="parcentage" [(ngModel)]="this.order.discount_type" name="discount_type" type="radio"
+                                    <input enterFocus value="parcentage" [(ngModel)]="this.order.discount_type" name="discount_type" type="radio"
                                         class="form-check-input" (click)="discountTypeChange('parcentage')" />
                                     parcentage
                                     </label>
@@ -225,9 +225,8 @@
                                     </h5>
                                 </td>
                                 <td style="padding-top: 0!important;">
-                                    <input autocomplete="off" type="number" class="form-control" id="discount" name="discount"
-                                    (input)="discountChange()" [(ngModel)]="order.discount_amount" placeholder="0"
-                                    (keydown.enter)="goTendered()" />
+                                    <input enterFocus autocomplete="off" type="number" class="form-control" id="discount" name="discount"
+                                    (input)="discountChange()" [(ngModel)]="order.discount_amount" placeholder="0"/>
                                 </td>
                             </tr>
                             <tr class="net-total swatch-holder swatch-holder-lg bg-midnight-bloom">
@@ -237,7 +236,7 @@
                             <tr class="sub-tax border-table-tr">
                                 <td class="availableQty">Payment Type</td>
                                 <td>
-                                    <select name="payment_type" id="payment_type" [(ngModel)]="order.payment_type" class="form-control">
+                                    <select enterFocus name="payment_type" id="payment_type" [(ngModel)]="order.payment_type" class="form-control">
                                       <option *ngFor="let item of paymentTypes" value="{{ item.name }}">{{ item.name }}</option>
                                     </select>
                                 </td>
@@ -245,7 +244,7 @@
                             <tr class="sub-discount border-table-tr">
                                 <td class="availableQty">Tendered</td>
                                 <td>
-                                    <input #tendered autocomplete="off" type="text" class="form-control validation-input" id="tendered"
+                                    <input enterFocus #tendered autocomplete="off" type="text" class="form-control validation-input" id="tendered"
                                     name="tendered" (input)="getChange()" [(ngModel)]="order.tendered" (keydown.enter)="submitOrder()"
                                     placeholder="0" />
                                 </td>
@@ -279,6 +278,7 @@
                                 </td>
                                 <td>
                                   <button
+                                    enterFocus
                                     [disabled]="isSubmitting"
                                     (click)="submitOrder()"
                                     class="mb-2 mr-2 btn btn-success btn-lg btn-block"
